--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="container__code" id="containerCode">
             <button id="botaoGenerator" class="generator__botao" type="submit">Gerar QR Code</button>
             <img class="code__imagem" id="codeImg" src="" alt="Imagem do Qr Code">
+            <a download="" href="" id="downloadbtn">teste</a>
         </div>
     </main>
     <script type="text/javascript" src="./script.js"></script>
